update cartAPI & doc
